// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/Core/Breadcrumb Default smoke-test 1`] = `
<nav aria-label="breadcrumb">
  <ol class="flex flex-wrap items-center gap-1.5 break-words text-muted-foreground text-sm sm:gap-2.5">
    <li class="inline-flex items-center gap-1.5">
      <a class="transition-colors hover:text-foreground">
        Home
      </a>
    </li>
    <li role="presentation"
        aria-hidden="true"
        class="[&amp;>svg]:h-3.5 [&amp;>svg]:w-3.5"
    >
      <svg xmlns="http://www.w3.org/2000/svg"
           width="24"
           height="24"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-chevron-right"
      >
        <path d="m9 18 6-6-6-6">
        </path>
      </svg>
    </li>
    <li class="inline-flex items-center gap-1.5">
      <a class="transition-colors hover:text-foreground">
        Components
      </a>
    </li>
    <li role="presentation"
        aria-hidden="true"
        class="[&amp;>svg]:h-3.5 [&amp;>svg]:w-3.5"
    >
      <svg xmlns="http://www.w3.org/2000/svg"
           width="24"
           height="24"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-chevron-right"
      >
        <path d="m9 18 6-6-6-6">
        </path>
      </svg>
    </li>
    <li class="inline-flex items-center gap-1.5">
      <span role="link"
            tabindex="0"
            aria-disabled="true"
            aria-current="page"
            class="text-muted-foreground transition-colors hover:text-foreground"
      >
        Breadcrumb
      </span>
    </li>
  </ol>
</nav>
`;

exports[`Design System/Core/Breadcrumb WithCustomSeparator smoke-test 1`] = `
<nav aria-label="breadcrumb">
  <ol class="flex flex-wrap items-center gap-1.5 break-words text-muted-foreground text-sm sm:gap-2.5">
    <li class="inline-flex items-center gap-1.5">
      <a class="transition-colors hover:text-foreground">
        Home
      </a>
    </li>
    <li role="presentation"
        aria-hidden="true"
        class="[&amp;>svg]:h-3.5 [&amp;>svg]:w-3.5"
    >
      <svg xmlns="http://www.w3.org/2000/svg"
           width="24"
           height="24"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-square-arrow-right"
      >
        <rect width="18"
              height="18"
              x="3"
              y="3"
              rx="2"
        >
        </rect>
        <path d="M8 12h8">
        </path>
        <path d="m12 16 4-4-4-4">
        </path>
      </svg>
    </li>
    <li class="inline-flex items-center gap-1.5">
      <a class="transition-colors hover:text-foreground">
        Components
      </a>
    </li>
    <li role="presentation"
        aria-hidden="true"
        class="[&amp;>svg]:h-3.5 [&amp;>svg]:w-3.5"
    >
      <svg xmlns="http://www.w3.org/2000/svg"
           width="24"
           height="24"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-square-arrow-right"
      >
        <rect width="18"
              height="18"
              x="3"
              y="3"
              rx="2"
        >
        </rect>
        <path d="M8 12h8">
        </path>
        <path d="m12 16 4-4-4-4">
        </path>
      </svg>
    </li>
    <li class="inline-flex items-center gap-1.5">
      <span role="link"
            tabindex="0"
            aria-disabled="true"
            aria-current="page"
            class="text-muted-foreground transition-colors hover:text-foreground"
      >
        Breadcrumb
      </span>
    </li>
  </ol>
</nav>
`;
